@@ -651,3 +651,5 @@
 	- added hard-coded "runtime error:" reporting for now (only generated by UndefinedBehaviorSanitizer)
 	- added tagmap report (report_type 3)
 	- added speed report (report_type 4)
+	- added option "tagmap_threshold" for report_type 3
+	- added option "speed_threshold" for report_type 4
